<resources>
    <string name="app_name">Lunar Tabs</string>
	<string name="LoadTabFile">Load Tab File</string>
	<string name="ChooseTrack">Choose Track: </string>
	<string name="SetTabHomeDir">Set Tab Home Directory</string>
	<string name="GenerateInstructions">Generate Instructions</string>
	<string name="BAT">Breakfast_at_Tiffanys.gpx</string>
	<string name="SectionIncrement">Set Section Increment</string>
	<string name="PlaybackSpeed">Set Playback Speed</string>
	<string name="GoTo">Go To Section</string>
	<string name="EnableStompMode">Enable Stomp Mode</string>
	<string name="DisableStompMode">Disable Stomp Mode</string>
	<string name="EnableMidiFollowing">Enable Midi Following</string>
	<string name="DisableMidiFollowing">Disable Midi Following</string>
	<string name="CalibStompMode">Calibrate Stomp Mode</string>
	<string name="StompModeText"> Stomp Mode allows you to automate Lunar Tabs with your feet. Place your Android device down on the floor parallel to your feet. Sit comfortably with the guitar in your hands. In stomp mode, when you want to go to the next playing instruction, just stomp in front of your Android device. The near by vibration due to your foot stomp is picked up by your device\'s accelerometer. Best results are on carpet or with the phone placed on a towel if on a hard floor. WARNING: DO NOT STOMP ON YOUR ANDROID DEVICE. I REPEAT: STOMP NEAR YOUR ANDROID DEVICE BUT DO NOT STOMP ON YOUR ANDROID DEVICE. When you are ready to enable stomp mode, press OK.</string>
	<string name="MidiFollowingText">With Midi Following, Lunar Tabs will follow along as you play chords. If your guitar is equipped with a Midi controller (such as Fishman Triple Play or Sonnus) or is a Midi guitar, simply plug in the USB receiver to your Android device using an On-The-Go cable. Now when you are practicing a guitar tab, Lunar Tabs will follow you as you play sequential instruction steps.</string>
	<string name="EnableVoiceActions">Enable Voice Actions</string>
	<string name="DisableVoiceActions">Disable Voice Actions</string>
	<string name="VoiceActionsTitle">Voice Actions</string>
	<string name="VoiceActionsYes">Enable Voice Actions?</string>
	<string name="VoiceActionsNo">Cancel</string>
	<string name="VoiceActionsText">By enabling voice actions, you can automate the application with voice commands. The following voice commands are available: up, down, next, back, toggle, play, play next, sample, stomp on, stomp off, voice off.</string>
	<string name="OK_button_text">OK</string>
	<string name="Cancel_button_text">Cancel</string>
    <string name="up_acc">Previous Instruction</string>
    <string name="down_acc">Next Instruction</string>
    <string name="back_acc">Previous Section</string>
    <string name="forward_acc">Next Section</string>
    <string name="ToggleModes">Toggle Modes</string>
    <string name="PlayMeasure">Play Sample</string>
    <string name="FILE_LOADED">File successfully loaded. Choose an instrument track.</string>
	<string name="ERROR_FILE_NOT_LOADED">Error: File could not be loaded.</string>
	<string name="ERROR_NO_DATA">Error: Current track contains no data.</string>
	<string name="ERROR_NO_FILE_LOADED">Error: No Tab File Loaded. Please load a tab file first.</string>
	<string name="ERROR_FIRST_SECTION">Error: You are at the beginning of the track. No previous section.</string>
	<string name="ERROR_LAST_SECTION">"Error: You are at the end of the track. No more sections."</string>
	<string name="ERROR_NO_INST_SELECTED">Error: No Instruction Selected.</string>
	<string name="ERROR_NO_PREV_INST">Error: No previous instructions in section.</string>
	<string name="ERROR_NO_NEXT_INST">Error: No more instructions in section.</string>
	<string name="HOME_DIR_SET_SUCCESS">Home directory successfully updated.</string>
    <string name="daidalos_select">Select</string>
    <string name="daidalos_cancel">Cancel</string>
    <string name="daidalos_ok">OK</string>
    <string name="daidalos_new_file">New</string>
    <string name="daidalos_create_file">Create file</string>
    <string name="daidalos_create_folder">Create folder</string>
    <string name="daidalos_accept">Accept</string>
    <string name="daidalos_enter_file_name">Enter the name of the file that you want to create</string>
    <string name="daidalos_enter_folder_name">Enter the name of the folder that you want to create</string>
    <string name="daidalos_yes">Yes</string>
    <string name="daidalos_no">No</string>
    <string name="daidalos_confirm_select_file">Are you sure that you want to select the file \'$file_name\'?</string>
    <string name="daidalos_confirm_create_file">The file \'$file_name\' do not exists, are you sure that you want to create it?</string>
    <string name="daidalos_confirm_select_folder">Are you sure that you want to select the folder \'$file_name\'?</string>
    <string name="daidalos_confirm_create_folder">The folder \'$file_name\' do not exists, are you sure that you want to create it?</string>
    <string name="stomper_calib_graph_title">Accelerometer Monitor</string>
    <string name="stomper_calib_graph_x_axis_label">Time</string>
    <string name="stomper_calib_graph_y_axis_label">Accel Reading</string>
    <string name="stomper_calib_graph_accel_series_label">Accelerometer</string>
    <string name="select_section_dialog_measure">Measure</string>
    <string name="select_section_dialog_to_measure">to Measure</string>
    <string name="stomper_enable_dialog_title">Enable Stomp Mode</string>
    <string name="midi_following_dialog_title">Enable Midi Following</string>
    	<string-array name="LANG_MOD">
	    <item>Open</item>
		<item>First</item>
		<item>Second</item>
		<item>Third</item>
		<item>Fourth</item>
		<item>Fifth</item>
		<item>Sixth</item>
		<item>Seventh</item>
		<item>Eighth</item>
		<item>Ninth</item>
		<item>Tenth</item>
		<item>Eleventh</item>
		<item>Twelfth</item>
		<item>Thirteenth</item>
		<item>Fourteenth</item>
		<item>Fifteenth</item>
		<item>Sixteenth</item>
		<item>Seventeenth</item>
		<item>Eighteenth</item>
		<item>Nineteenth</item>
		<item>Twentieth</item>
		<item>Twenty-first</item>
		<item>Twenty-second</item>
		<item>Twenty-third</item>
		<item>Twenty-fourth</item>
		<item>Twenty-fifth</item>
		<item>Twenty-sixth</item>
		<item>Twenty-seventh</item>
		<item>Twenty-eight</item>
		<item>Twenty-ninth</item>
		<item>Thirtieth</item>
		<item>Thirty-first</item>
		<item>Thirty-second</item>
		<item>Thirty-third</item>
		<item>Thirty-fourth</item>
		<item>Thirty-fifth</item>
		<item>Thirty-sixth</item>
		<item>Thirty-seventh</item>
		<item>Thirty-eigth</item>
		<item>Thirty-nineth</item>
		<item>Fortieth</item>
	</string-array>
	<string-array name="VOICE_COMMANDS">	    
	   	<item>Toggle</item>	
		<item>Play</item>	
		<item>Next</item>
		<item>Back</item>	
		<item>Up</item>
		<item>Down</item>	
		<item>Sample</item>
		<item>Play next</item>
		<item>Play previous</item>		
		<item>Stomp On</item>
		<item>Stomp Off</item>
		<item>Voice Off</item>
	</string-array>
    <string name="back">&#8592;</string>
    <string name="forward">&#8594;</string>
	<string name="instruction_settings_title">Instruction Settings</string>
	<string name="set_section_increment_summary">Modify how instructions are grouped into sections.</string>
	<string name="screen_reader_speed_title">Screen Reader Speed</string>
	<string name="screen_reader_speed_summary">Modify speed of screen reader voice.</string>
	<string name="screen_reader_speed_default_value">Normal</string>
	<string name="go_to_summary">Skip to a particular section of the tab file.</string>
</resources>