<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/SetHomeDirMenuItem"
          android:title="@string/SetTabHomeDir" />
    <item android:id="@+id/SecIncMenuItem"
          android:title="@string/SectionIncrement" />
    <item android:id="@+id/GoToMenuItem"
          android:title="@string/GoTo" />
    <item android:id="@+id/PlaybackSpeedMenuItem"
          android:title="@string/PlaybackSpeed" />
    <item android:id="@+id/VoiceActionsMenuItem"
          android:title="@string/EnableVoiceActions" />
    <item android:id="@+id/CalibStompModeMenuItem"
          android:title="@string/CalibStompMode" />
    <item android:id="@+id/StompModeMenuItem"
          android:title="@string/EnableStompMode" />
    <item android:id="@+id/MidiFollowingMenuItem"
          android:title="@string/EnableMidiFollowing" />
</menu>