<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="wrap_content" android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:rotation="90"
        android:paddingBottom="60dp"
        android:src="@drawable/triple_play" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:text="@string/MidiFollowingText" />
    
	<LinearLayout
		android:id="@+id/buttonLayout2"
		android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"  
	    android:layout_below="@+id/textView1"              		
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

	    <Button
	        android:id="@+id/CANCEL_BUTTON_MIDI_FOLLOWING_DIALOG"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/Cancel_button_text" />
	        
	    <Button
	        android:id="@+id/OK_BUTTON_MIDI_FOLLOWING_DIALOG"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/OK_button_text" />
	    
	</LinearLayout> 
</RelativeLayout>